# jubilant-doodle

./: Cargo.toml
migrations/: 001_create_jobs_table.sql
src/: main.rs
src/db/: migrations.rs  mod.rs
src/handlers/: job_handlers.rs  mod.rs
src/models/: job.rs
src/services/: job_services.rs
