[package]
name = "axum_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros"] }

dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2.0.8"